# LoggerApp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt  logger.cpp  logger.hpp
server/: CMakeLists.txt  main.cpp
stats/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  logger_test.cpp
